--- a/app/scss/main.scss
+++ b/app/scss/main.scss
@@ -1,223 +1,1 @@
-* {
-  box-sizing: border-box;
-}
-
-body {
-  margin: 0;
-  font-family: Arial, sans-serif;
-}
-
-#myBooks {
-    display: flex;
-    justify-content: center;
-    flex-direction: column;
-}
-
-//Logo du site
-.logo {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  width: 12em;
-  margin: 0 auto;
-
-  img {
-    max-width: 100%;
-    object-fit: contain;
-
-  }
-
-  @media (min-width: 768px) {
-    img {
-      width: 50%;
-    }
-  }
-}
-
-
-.title {
-  text-align: center;
-  margin: 0;
-  padding: 10px;
-  font-size: 2rem;
-  color: #333;
-  background-color: #eee;
-}
-
-h2 {
-  margin: 0;
-  padding: 10px;
-  font-size: 1.5rem;
-  text-align: center;
-}
-
-hr {
-  border: 0;
-  border-top: 1px solid #ccc;
-  margin: 10px 0;
-}
-
-#content {
-  margin: 0;
-  padding: 10px;
-}
-
-#search-results {
-  margin: 0;
-  padding: 10px;
-}
-
-// Styles pour les écrans de plus grande taille
-@media (min-width: 768px) {
-  .title {
-    font-size: 3rem;
-  }
-
-  .h2 {
-    font-size: 2rem;
-  }
-}
-
-form {
-  color: #333;
-  font-family: Arial, sans-serif;
-  margin: 10px;
-
-  label {
-    font-size: 16px;
-    font-weight: bold;
-    margin-bottom: 8px;
-
-    @media (min-width: 480px) {
-      font-size: 18px;
-      margin-bottom: 12px;
-    }
-  }
-
-
-  input {
-    display: block;
-    width: 100%;
-    padding: 10px;
-    margin: 10px 0;
-    background-color: #fff;
-    border: 1px solid #ccc;
-  }
-
-  button[type="submit"] {
-    display: block;
-    width: 100%;
-    padding: 10px;
-    margin: 10px 0;
-    background-color: #469488;
-    color: #fff;
-    border: 0;
-    cursor: pointer;
-
-    &:hover {
-      background-color: #666;
-    }
-  }
-}
-
-#button-valid {
-  color: #fff;
-  font-family: Arial, sans-serif;
-  width: 100%;
-  padding: 10px;
-  margin: 10px 0;
-  background-color: #469488;
-  border: 0;
-  cursor: pointer;
-}
-
-#cancel {
-  color: #fff;
-  font-family: Arial, sans-serif;
-  display: block;
-  width: 100%;
-  padding: 10px;
-  margin: 10px 0;
-  background-color: #f44336;
-  border: 0;
-  cursor: pointer;
-}
-
-
-// Render cards of books
-.book-card {
-  display: flex;
-  flex-wrap: wrap;
-  flex-direction: column;
-  align-items: flex-start;
-  background: #ffffff;
-  padding: 20px;
-  margin-bottom: 30px;
-  border-radius: 5px;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
-
-
-  &__image {
-    flex: 0 0 100px;
-    margin: 30px auto;
-
-
-    img {
-      width: 100%;
-      height: auto;
-      object-fit: cover;
-    }
-  }
-
-  &__info {
-    flex: 1;
-    display: flex;
-    flex-direction: column; /* Change flex direction to column */
-    align-items: flex-start; /* Align items to the start */
-
-    &__title {
-      font-size: 1.2rem;
-      font-weight: bold;
-      margin-bottom: 10px;
-    }
-
-
-    &__id {
-      font-size: 0.9rem;
-      color: grey;
-      margin-bottom: 10px;
-    }
-
-    &__description {
-      font-size: 0.9rem;
-      color: grey;
-      margin-bottom: 10px;
-    }
-
-    &__author {
-      font-size: 0.9rem;
-      color: grey;
-      margin-bottom: 10px;
-    }
-  }
-
-  @media (min-width: 480px) {
-    &__image {
-      flex: 0 0 150px;
-      margin-right: 20px;
-
-      img {
-        width: 100%;
-        height: auto;
-        object-fit: cover;
-        justify-content: center;
-      }
-    }
-
-    &__info {
-      &__title {
-        font-size: 1.4rem;
-      }
-    }
-  }
-}
+@import "./components/button";
