--- a/app/scss/components/_button.scss
+++ b/app/scss/components/_button.scss
@@ -1,10 +1,11 @@
 .button {
   display: inline-block;
+  margin: 1rem;
   padding: 1rem 2rem;
   border-radius: 0.5rem;
   font-size: 1rem;
   font-weight: 600;
-  text-align: center;
+  text-align: left;
   text-decoration: none;
   text-transform: uppercase;
   letter-spacing: 0.1rem;
@@ -18,4 +19,9 @@
       color: white;
     }
   }
+}
+
+.button--cancel {
+  background-color: red;
+  color: white;
 }
