--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,30 @@
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@100;400&display=swap");
+body {
+  font-family: "Roboto Condensed", serif;
+}
+
+.title {
+  text-align: center;
+  font-weight: 100;
+  font-family: "Roboto Thin", serif;
+  border: 1px solid lightgray;
+  padding: 10px;
+  box-shadow: 2px 2px 5px 0 rgba(0, 0, 0, 0.2);
+}
+
+.h2 {
+  text-align: center;
+  font-family: "Roboto", serif;
+}
+
 .button {
   display: inline-block;
+  margin: 1rem;
   padding: 1rem 2rem;
   border-radius: 0.5rem;
   font-size: 1rem;
   font-weight: 600;
-  text-align: center;
+  text-align: left;
   text-decoration: none;
   text-transform: uppercase;
   letter-spacing: 0.1rem;
@@ -18,6 +38,35 @@
 }
 .button--green__text {
   color: white;
+}
+
+.button--cancel {
+  background-color: red;
+  color: white;
+}
+
+#searchForm {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  margin: 10px 0;
+}
+#searchForm input[type=text] {
+  padding: 8px;
+  border-radius: 5px;
+  border: none;
+  margin: 0 10px;
+  flex-grow: 1;
+}
+#searchForm input[type=submit] {
+  background-color: green;
+  color: white;
+  padding: 8px 16px;
+  border-radius: 5px;
+  border: none;
+  cursor: pointer;
+  margin: 0 10px;
 }
 
 /*# sourceMappingURL=style.css.map */
