design result using cards and change icon

--- a/app/scss/main.scss
+++ b/app/scss/main.scss
@@ -2,3 +2,7 @@
 @import "./typography/typography";
 @import "./components/button";
 @import "components/form";
+@import "responsive/responsive";
+@import "components/card";
+@import "abstracts/mixins";
+@import "abstracts/variables";
