--- a/css/style.css
+++ b/css/style.css
@@ -69,4 +69,61 @@ body {
   margin: 0 10px;
 }
 
+/* Card */
+.card {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  padding: 1rem;
+  margin: 1rem;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  border-radius: 0.5rem;
+}
+.card__title {
+  margin-left: 1rem;
+}
+.card__image {
+  max-width: 100%;
+}
+.card__description {
+  text-align: justify;
+}
+.card__author {
+  font-style: italic;
+}
+
+.heading {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
+.heading h3 {
+  flex: 1;
+}
+.heading i {
+  flex: 1;
+  font-size: 2rem;
+  margin-left: 4rem;
+}
+
+/* Search Results */
+@media (min-width: 768px) {
+  .search-results {
+    display: flex;
+    flex-wrap: wrap;
+  }
+}
+@media (min-width: 768px) {
+  .search-results .card {
+    width: calc(33.33% - 20px);
+    margin: 10px;
+  }
+}
+
+@media (min-width: 0) {
+  .card {
+    flex-direction: column;
+  }
+}
+
 /*# sourceMappingURL=style.css.map */
