design backgroun-color title and color, add feature display forme when cancel button is clicked

--- a/css/style.css
+++ b/css/style.css
@@ -10,6 +10,8 @@ body {
   border: 1px solid lightgray;
   padding: 10px;
   box-shadow: 2px 2px 5px 0 rgba(0, 0, 0, 0.2);
+  background-color: #F0F0F0;
+  color: grey;
 }
 
 .h2 {
