--- a/app/scss/responsive/_responsive.scss
+++ b/app/scss/responsive/_responsive.scss
@@ -1,3 +1,5 @@
+@import "../abstracts/variables";
+
 // Mobile First Breakpoints
 $break-small: 576px;
 $break-medium: 768px;
@@ -10,6 +12,7 @@ $break-xlarge: 1200px;
 }
 
 @media (min-width: $break-medium) {
+
   #searchForm {
     display: flex;
     flex-wrap: wrap;
@@ -25,9 +28,11 @@ $break-xlarge: 1200px;
     width: 100%;
   }
 
-  #search-button {
-    justify-content: left;
+  .button {
+    align-self: baseline;
   }
+
+
 }
 
 @media (min-width: $break-large) {
@@ -37,6 +42,7 @@ $break-xlarge: 1200px;
     align-items: center;
     margin: 10px 0;
   }
+
 }
 
 @media (min-width: $break-xlarge) {
