stylish cards for a grid layout, fix removeFromReadingList for remove the card-container, add class card-container in the template of displayBooks.js

--- a/app/scss/components/_button.scss
+++ b/app/scss/components/_button.scss
@@ -14,7 +14,7 @@
     color: white;
   }
   &--green {
-    background-color: darkgreen;
+    background-color: #469488;
     &__text {
       color: white;
     }
