--- a/app/scss/components/_form.scss
+++ b/app/scss/components/_form.scss
@@ -1,9 +1,12 @@
+@import "../abstracts/mixins";
+
 #searchForm {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
   align-items: center;
   margin: 10px 0;
+
 
   input[type='text'] {
     padding: 8px;
@@ -22,4 +25,46 @@
     cursor: pointer;
     margin: 0 10px;
   }
+
+
 }
+
+@include breakpoints(md) {
+  #searchForm {
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    margin: 10px 0;
+    flex-direction: column;
+  }
+
+  input {
+    flex: 1;
+    margin-right: 10px;
+    align-items: flex-start;
+    width: 100%;
+  }
+
+  .button {
+    align-self: baseline;
+  }
+}
+
+@include breakpoints(lg) {
+  #searchForm {
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    margin: 10px 0;
+  }
+}
+
+@include breakpoints(xl) {
+  #searchForm {
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    margin: 10px 0;
+  }
+}
+
