--- a/css/style.css
+++ b/css/style.css
@@ -40,7 +40,7 @@ body {
   color: white;
 }
 .button--green {
-  background-color: darkgreen;
+  background-color: #469488;
 }
 .button--green__text {
   color: white;
@@ -109,42 +109,8 @@ body {
     margin: 10px 0;
   }
 }
-@media (min-width: 768px) {
-  #searchForm {
-    display: flex;
-    flex-wrap: wrap;
-    align-items: center;
-    margin: 10px 0;
-    flex-direction: column;
-  }
-  input {
-    flex: 1;
-    margin-right: 10px;
-    align-items: flex-start;
-    width: 100%;
-  }
-  .button {
-    align-self: baseline;
-  }
-}
-@media (min-width: 992px) {
-  #searchForm {
-    display: flex;
-    flex-wrap: wrap;
-    align-items: center;
-    margin: 10px 0;
-  }
-}
-@media (min-width: 1200px) {
-  #searchForm {
-    display: flex;
-    flex-wrap: wrap;
-    align-items: center;
-    margin: 10px 0;
-  }
-}
 /* Card */
-#testAmol {
+#card-container {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
@@ -154,14 +120,13 @@ body {
   flex-wrap: wrap;
   justify-content: center;
   align-items: center;
-  width: 30%;
+  width: 100%;
   display: flex;
   padding: 1rem;
   margin: 0 10px;
   box-sizing: border-box;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
   border-radius: 0.5rem;
-  /* Search Results */
 }
 .cards .card__title {
   margin-left: 1rem;
@@ -193,16 +158,23 @@ body {
     display: flex;
     flex-wrap: wrap;
   }
-  .cards .search-results .card {
-    width: 33.33%;
+  .cards .cards {
+    width: 45%;
   }
 }
+
 @media (min-width: 576px) {
-  .cards .card__image {
+  .cards {
+    width: 30%;
+  }
+  .cards__image {
     max-width: 40%;
   }
 }
 @media (min-width: 992px) {
+  .cards {
+    width: 30%;
+  }
   .cards .card__image {
     max-width: 70%;
   }
