--- a/app/scss/components/_button.scss
+++ b/app/scss/components/_button.scss
@@ -10,6 +10,8 @@
   text-transform: uppercase;
   letter-spacing: 0.1rem;
   transition: all 0.2s ease-in-out;
+  align-self: baseline;
+
   &__text {
     color: white;
   }
