--- a/app/scss/components/_form.scss
+++ b/app/scss/components/_form.scss
@@ -34,8 +34,11 @@
     padding: 8px;
     border-radius: 5px;
     border: none;
-    margin: 0 10px;
+    margin: 10px;
+    display: flex;
     flex-grow: 1;
+    align-items: flex-start;
+    width: 98%;
   }
 
   input[type='submit'] {
