--- a/css/style.css
+++ b/css/style.css
@@ -35,6 +35,7 @@ body {
   text-transform: uppercase;
   letter-spacing: 0.1rem;
   transition: all 0.2s ease-in-out;
+  align-self: baseline;
 }
 .button__text {
   color: white;
@@ -87,8 +88,11 @@ body {
   padding: 8px;
   border-radius: 5px;
   border: none;
-  margin: 0 10px;
+  margin: 10px;
+  display: flex;
   flex-grow: 1;
+  align-items: flex-start;
+  width: 98%;
 }
 #searchForm input[type=submit] {
   background-color: green;
