refacto clearResults.js

--- a/app/scss/components/_button.scss
+++ b/app/scss/components/_button.scss
@@ -5,21 +5,20 @@
   border-radius: 0.5rem;
   font-size: 1rem;
   font-weight: 600;
-  text-align: left;
+  text-align: center;
   text-decoration: none;
   text-transform: uppercase;
   letter-spacing: 0.1rem;
   transition: all 0.2s ease-in-out;
   align-self: baseline;
+  cursor: pointer;
 
   &__text {
     color: white;
   }
+
   &--green {
     background-color: #469488;
-    &__text {
-      color: white;
-    }
   }
 }
 
